[package]
name = "raccoonLang"
version = "0.1.0"
edition = "2021"

[dependencies]
ustr = "1.1.0"
tempdir = "0.3.7"
paste = "1.0.15"
icu = {version = "1.5.0", features = ["compiled_data"]}
cranelift-frontend = "0.115.0"
cranelift-codegen = "0.115.0"
assert_matches = "1.5.0"

[dev-dependencies]
parameterized = "2.0.0"